# kontrakwise-api

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 3e9ec41dbb2d_create_user_table.py  4728b23662b6_add_document_status_progress.py  68f146620c8b_create_user_document_type_table.py  97d8d7c63d6d_add_column_document_risk_level.py  d4d77a6a7ea7_create_add_column_document_type.py  e156fc5f37bf_create_chat_table.py  e66907ae691f_create_dcument_table.py  f57153aea14f_create_documents_table.py
app/api/: guards.py  main.py
app/api/routes/: chat.py  document_types.py  documents.py  users.py
app/core/: config.py  db.py  embedding_client.py  gemini_client.py  pinecone_client.py  security.py
app/migrations/: __init__.py  chat.py  document_type.py  documents.py
app/models/: ai_analysis.py  chat.py  document_types.py  documents.py  users.py
app/services/: ai_analysis_service.py  chat_service.py  document_type_service.py  documents_service.py
app/servies/: document_type_service.py  documents_service.py  user_service.py
app/utils/: __init__.py  prompt.py
