[project]
name = "kontrakwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.7",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.22",
    "pyjwt>=2.11.0",
    "pwdlib[argon2]>=0.3.0",
    "psycopg>=3.3.2",
    "pinecone>=8.0.1",
    "pymupdf>=1.27.1",
    "google-genai>=1.63.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-core>=1.2.13",
    "asyncio>=4.0.0",
]
